[package]
name = "random-walk"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/random-walk"
documentation = "https://docs.rs/random-walk"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
rand = "0.8.5"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
